# film-finder

./: README.md
embeddings/: README.md  pyproject.toml
embeddings/embeddings/: embeddings.py
ext/: 2-examples-flattened.jsonl
filmfinder.vespa.app/: services.xml
filmfinder.vespa.app/ext/: 2-examples-flattened.jsonl  2-examples.jsonl
filmfinder.vespa.app/schemas/: film.sd
localenv/: docker-compose.yaml
schemas/: film.sd
search/: pyproject.toml
search/notebooks/: search.ipynb
