[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = "Pipeline for calculating embeddings for films"
authors = ["Sam Briggs <samuel.briggs@depop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.7.0"
click = "^8.1.7"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
embeddings = "embeddings.embeddings:main"
